[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
url = { version = "2", features = ["serde"] }
serde_json = { version = "1" }
semver = { version = "1", features = ["serde"] }
base64 = "0.21"
base64-serde = "0.7"
rand = "0.7"
tower = "0.4"
config = { version = "0.13", features = ["json5"] }
json5 = "0.4"
