[package]
name = "contract"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6", features = ["macros", "http2", "headers"] }
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2.0.0-pre.0", features = ["serde", "rand_core"] }
url = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
semver = { version = "1", features = ["serde"] }
base64 = "0.21"
rand = "0.8"
tower = "0.4"
config = { version = "0.13", features = ["json5"] }
json5 = "0.4"
rust_decimal = { version = "1.29.1", features = [ "serde-with-str", "serde-with-float" ] }
rust_decimal_macros = "1.29.1"
humantime-serde = "1.1.1"
humantime = "2.1.0"
log = "0.4.18"
env_logger = "0.10.0"
wireskip_macros = { path = "src/macros" }
strum = { version = "0.25.0", features = ["derive"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
http = "0.2.9"
async-trait = "0.1.71"
ws_common = { path = "../ws_common" }
once_cell = "1.18.0"
tower-http = { version = "0.4.3", features = ["normalize-path"] }
